--- a/webapp/src/html/index.html
+++ b/webapp/src/html/index.html
@@ -8,7 +8,7 @@
         <meta property="og:type" content="website" />
         <meta property="og:site_name" content="Computernewb's Internet Pub Hub" />
         <link rel="stylesheet" href="https://unpkg.com/98.css" />
-        <link type="text/css" rel="stylesheet" href="../css/style.css" />
+        <link type="text/css" rel="stylesheet" href="../css/style.scss" />
     </head>
     <body>
         <div id="logonView">
