format code with prettier

--- a/webapp/src/html/testbed.html
+++ b/webapp/src/html/testbed.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" prefix="og: https://ogp.me/ns#">
 	<head>
 		<title>MSAgent Chat - testbed</title>
@@ -19,13 +19,12 @@
 		</div>
 		<div class="field-row-stacked" style="width: 400px">
 			<form id="acsUrlForm">
-				<label for="acsUrl">Load ACS from URL</label><br>
-				<input type="url" id="acsUrl" required/><br>
-				<input type="submit" value="Load"/>
-			</form>	
+				<label for="acsUrl">Load ACS from URL</label><br />
+				<input type="url" id="acsUrl" required /><br />
+				<input type="submit" value="Load" />
+			</form>
 		</div>
 		<!-- This is where all Agents go -->
-		<div id="agent-mount">
-		</div>
+		<div id="agent-mount"></div>
 	</body>
 </html>
