add image upload support

--- a/webapp/src/html/index.html
+++ b/webapp/src/html/index.html
@@ -122,6 +122,7 @@
 
 			<div id="chatBar">
 				<input type="text" id="chatInput" placeholder="Send a message" />
+				<button id="imageUploadBtn">Image</button>
 				<button id="chatSendBtn">Send</button>
 			</div>
 		</div>
