--- a/webapp/src/html/index.html
+++ b/webapp/src/html/index.html
@@ -53,7 +53,7 @@
 
 			<ul id="bottomLinks">
 				<li><a href="#" id="rulesLink">Rules</a></li>
-				<li><a target="blank" href="https://discord.gg/a4kqb4mGyX">Discord</a></li>
+				<li><a target="blank" href="https://discord.gg/JfFDGc2PYd">Discord</a></li>
 				<li><a target="blank" href="https://git.computernewb.com/computernewb/msagent-chat">Source Code</a></li>
 			</ul>
 		</div>
