--- a/webapp/src/html/index.html
+++ b/webapp/src/html/index.html
@@ -7,6 +7,7 @@
 		<meta property="og:title" content="MSAgent Chat" />
 		<meta property="og:type" content="website" />
 		<meta property="og:site_name" content="Computernewb's Internet Pub Hub" />
+		<meta name="description" content="A chat room with Microsoft Agent characters." />
 		<link rel="stylesheet" href="https://unpkg.com/98.css" />
 		<link type="text/css" rel="stylesheet" href="../css/style.scss" />
 	</head>
