add animation tool menu and context menu item

--- a/webapp/src/html/index.html
+++ b/webapp/src/html/index.html
@@ -120,7 +120,21 @@
 					</div>
 				</div>
 			</div>
-
+			<div class="window" id="animWindow">
+				<div class="title-bar">
+					<div class="title-bar-text">Animations</div>
+					<div class="title-bar-controls">
+						<button aria-label="Close"></button>
+					</div>
+				</div>
+				<div class="window-body">
+					<label for="animSelect">Animation:</label><br>
+					<div id="animSelectContainer">
+						<select id="animSelect"></select>
+						<button id="animPlayBtn">Play</button>	
+					</div>
+				</div>
+			</div>
 			<div id="chatBar">
 				<input type="text" id="chatInput" placeholder="Send a message" />
 				<button id="imageUploadBtn">Image</button>
