run the formatter

--- a/webapp/src/html/index.html
+++ b/webapp/src/html/index.html
@@ -128,10 +128,10 @@
 					</div>
 				</div>
 				<div class="window-body">
-					<label for="animSelect">Animation:</label><br>
+					<label for="animSelect">Animation:</label><br />
 					<div id="animSelectContainer">
 						<select id="animSelect"></select>
-						<button id="animPlayBtn">Play</button>	
+						<button id="animPlayBtn">Play</button>
 					</div>
 				</div>
 			</div>
