add rudimentary multiroom support

--- a/webapp/src/html/index.html
+++ b/webapp/src/html/index.html
@@ -28,7 +28,7 @@
 						</div>
 						<div id="logonRoomContainer">
 							<label for="logonRoom">Room name:</label>
-							<input type="text" id="logonRoom" placeholder="Coming Soon" disabled />
+							<input type="text" id="logonRoom" placeholder="Default" />
 						</div>
 						<div id="logonButtonsContainer">
 							<select id="agentSelect">
